chore(java25lts): Updated build to java 25