@@ -1,5 +1,7 @@
+import org.springframework.boot.gradle.tasks.run.BootRun
+
 plugins {
-    id("org.springframework.boot") version "3.5.5"
+    id("org.springframework.boot") version "3.5.6"
     id("io.spring.dependency-management") version "1.1.7"
     id("java")
     id("application")
@@ -8,11 +10,12 @@ plugins {
 }
 
 group = "dev.donaldsonblack"
-java { toolchain { languageVersion.set(JavaLanguageVersion.of(21)) } }
+java { toolchain { languageVersion.set(JavaLanguageVersion.of(25)) } }
 
 repositories { mavenCentral() }
 
 dependencies {
+		implementation("org.springframework:spring-core")
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-validation")
@@ -45,9 +48,11 @@ application {
     mainClass.set("dev.donaldsonblack.cura.Cura")
 }
 
-// springBoot {
-//   buildInfo()
-// }
+tasks.named<BootRun>("bootRun") {
+    jvmArgs = listOf(
+        "-XX:+UseCompactObjectHeaders",
+    )
+}
 
 springBoot {
     buildInfo {
